--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* sp ファースト */
+/* 関数電卓非表示 ----------------------------------------------- */
 
 * {
   /* padding と border を幅と高さに含める */
@@ -21,6 +21,22 @@ body {
 h1 {
   margin: 0;
   padding: 0;
+}
+
+input[type="button"] {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  background: none;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  /* 利用環境によるcss差なくす */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  cursor: pointer;
 }
 
 .main {
@@ -49,13 +65,9 @@ table {
   background-color: red;
 }
 
-tr {
-  
-}
+tr {}
 
-td {
-  
-}
+td {}
 
 .button {
   background-color: pink;
@@ -86,5 +98,23 @@ td {
   color: rgb(255, 255, 255);
 }
 
-/* PC画面 ----------------------------------------------- */
-@media (min-width: 521px) {}
+.tx-color-3 {
+  color: rgb(112, 117, 122);
+}
+
+/* 関数電卓 scientific calculator */
+.sc-calc {
+  display: none;
+}
+
+/* 関数電卓表示 ----------------------------------------------- */
+/* Google 検索時の仕様に合わせ break point 指定 */
+@media (min-width: 460px) {
+  table {
+    background-color: green;
+  }
+
+  .sc-calc {
+    display: table-cell;
+  }
+}
