--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,23 @@
   box-sizing: border-box;
 }
 
+input {
+  width: 100%;
+  height: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: transparent;
+  border: none;
+  border-radius: 0;
+  font: inherit;
+  outline: none;
+}
+
+td {
+  padding: 0;
+}
+
 html {
   height: 100%;
   max-height: 100%;
@@ -24,22 +41,6 @@ h1 {
   padding: 0;
 }
 
-input[type="button"] {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background: none;
-  border: none;
-  border-radius: 0;
-  outline: none;
-  /* 利用環境によるcss差なくす */
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  cursor: pointer;
-}
-
 .main {
   height: 100%;
   max-height: 100%;
@@ -47,15 +48,26 @@ input[type="button"] {
 }
 
 .panel {
+  padding: 10px 16px 0 10px;
   /* border: 1px, solid, rgb(218, 220, 224); */
   border: 10px, solid, blue;
   background-color: aqua;
-  height: 100px;
+  height: 80px;
 }
 
-.calc-buttons {
-  background-color: blueviolet;
+.history {
+  display: flex;
+  justify-content: space-between;
 }
+
+.preview {
+  height: 32px;
+  margin-top: 6px;
+  background-color: orange;
+  display: flex;
+}
+
+
 
 table {
   /* セル間の隙間を指定 */
@@ -68,13 +80,12 @@ table {
 
 td > div {
   cursor: pointer;
+  line-height: 36px;
 }
 
 .button {
   background-color: pink;
   height: 36px;
-  /* margin: 4px; */
-  /* width: 100%; */
   text-align: center;
   border-radius: 4px;
 }
