--- a/css/styles.css
+++ b/css/styles.css
@@ -45,12 +45,13 @@ h1 {
   height: 100%;
   max-height: 100%;
   margin: 12px;
+  padding: 16px 0 12px 0;
 }
 
 .panel {
   padding: 10px 16px 0 10px;
   /* border: 1px, solid, rgb(218, 220, 224); */
-  border: 10px, solid, blue;
+  border: 1px, solid, green;
   background-color: aqua;
   height: 80px;
 }
@@ -67,7 +68,14 @@ h1 {
   display: flex;
 }
 
+.hogehoge {
+  font-size: 32px;
+  text-align: right;
+}
 
+.calc-buttons {
+  margin-top: 8px;
+}
 
 table {
   /* セル間の隙間を指定 */
