--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ h1 {
 }
 
 .main {
+  position: relative;
   height: 100%;
   max-height: 100%;
   margin: 12px;
@@ -67,7 +68,43 @@ h1 {
 }
 
 .icon-1 {
-    color: rgb(112, 117, 122);
+  color: rgb(112, 117, 122);
+  font-size: 22px;
+}
+
+.icon-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: rgb(26, 115, 232);
+  font-size: 22px;
+  padding: 16px;
+}
+
+.modal-wrapper {
+  position: absolute;
+  top: 11px;
+  left: -1px;
+  width: 280px;
+  max-width: 100%;
+  min-height: 142px;
+  max-height: 999999px;
+  z-index: 3;
+  text-align: center;
+  /* background-color: rgb(255, 255, 255); */
+  background-color: orange;
+  color: rgb(77, 81, 86);
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.28) 0 1px 4px 0;
+  font-size: 16px;
+}
+
+/* position 指定用の div クラス */
+.modal-position {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 41px;
 }
 
 .preview {
@@ -76,7 +113,7 @@ h1 {
   display: flex;
 }
 
-.formula {
+.expression {
   font-size: 32px;
   text-align: right;
   color: rgb(77, 81, 86);
@@ -93,7 +130,7 @@ table {
   width: 100%;
 }
 
-td > div {
+td>div {
   margin: 4px;
   cursor: pointer;
   line-height: 36px;
