--- a/css/styles.css
+++ b/css/styles.css
@@ -63,28 +63,6 @@ h1 {
   justify-content: space-between;
 }
 
-.table-1+.table-1 {
-  margin-top: 16px;
-}
-
-.his-1 {
-  height: 32px;
-  padding: 6px 12px;
-  font-size: 14px;
-  color: rgb(26, 115, 232);
-  border: 1px solid rgb(218, 220, 224);
-  border-radius: 4px;
-  text-align: center;
-}
-
-.his-2 {
-  height: 30px;
-  padding: 1px;
-  font-size: 20px;
-  color: rgb(112, 117, 122);
-  text-align: center;
-}
-
 #prev-history {
   margin-top: 3px;
   font-size: 13px;
@@ -96,15 +74,6 @@ h1 {
   font-size: 22px;
 }
 
-.icon-2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  padding: 16px;
-  color: rgb(26, 115, 232);
-  font-size: 22px;
-}
-
 #modal {
   display: none;
   position: absolute;
@@ -112,7 +81,7 @@ h1 {
   left: -1px;
   width: 280px;
   max-width: 100%;
-  min-height: 142px;
+  min-height: 104px;
   max-height: 999999px;
   z-index: 3;
   text-align: center;
@@ -128,7 +97,64 @@ h1 {
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 41px;
+  /* padding: 41px; */
+  padding-top: 54px;
+}
+
+.icon-2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 16px;
+  color: rgb(26, 115, 232);
+  font-size: 22px;
+}
+
+#modal-text {
+  padding: 0 41px 41px 41px;
+}
+
+#history-table {
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 54px;
+  left: 0;
+  padding: 0 16px 16px 16px;
+}
+
+.table-1+.table-1 {
+  margin-top: 16px;
+}
+
+.table-1 {
+  text-align: left;
+  table-layout: auto;
+}
+
+.his-1 {
+  display: table-cell;
+  height: 32px;
+  line-height: 14px;
+  padding: 6px 12px;
+  font-size: 14px;
+  color: rgb(26, 115, 232);
+  border: 1px solid rgb(218, 220, 224);
+  border-radius: 4px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.his-2 {
+  display: table-cell;
+  width: 30px;
+  height: 30px;
+  line-height: 20px;
+  padding: 1px;
+  font-size: 20px;
+  color: rgb(112, 117, 122);
+  text-align: center;
+  vertical-align: middle;
 }
 
 .preview {
@@ -147,7 +173,7 @@ h1 {
   margin-top: 8px;
 }
 
-table {
+.calc-buttons table {
   /* セル間の隙間を指定 */
   border-collapse: separate;
   table-layout: fixed;
