--- a/css/styles.css
+++ b/css/styles.css
@@ -132,7 +132,7 @@ h1 {
   table-layout: auto;
 }
 
-.his-1 {
+.td-1 {
   display: table-cell;
   height: 32px;
   line-height: 14px;
@@ -145,7 +145,7 @@ h1 {
   vertical-align: middle;
 }
 
-.his-2 {
+.td-2 {
   display: table-cell;
   width: 30px;
   height: 30px;
