--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   /* カーソル設定 */
   cursor: default;
+  /* タップ時に青く光るのを透明にして消す */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 input {
@@ -20,6 +22,14 @@ input {
   outline: none;
 }
 
+.btn-tr {
+  height: 44px;
+}
+
+.btn-tr td {
+  height: 44px;
+}
+
 td {
   padding: 0;
 }
@@ -33,8 +43,7 @@ body {
   margin: 0%;
   height: 100%;
   max-height: 100%;
-  /* Helvetica Neue は提供されていないため除外 */
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "Helvetica Neue", "Roboto", Arial, sans-serif;
   font-size: 15px;
 }
 
@@ -176,15 +185,17 @@ h1 {
 
 .calc-buttons table {
   /* セル間の隙間を指定 */
-  border-collapse: separate;
+  border-collapse: collapse;
+  border-spacing: 0;
   table-layout: fixed;
   width: 100%;
 }
 
-td>div {
+.btn-tr td>div {
+  height: 36px;
   margin: 4px;
   cursor: pointer;
-  line-height: 36px;
+  line-height: 34px;
   border-radius: 4px;
 }
 
