--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,7 @@ h1 {
   position: relative;
   width: 100%;
   height: 100%;
-  /* padding: 41px; */
-  padding-top: 54px;
+  padding: 41px;
 }
 
 .icon-2 {
@@ -131,7 +130,7 @@ h1 {
 }
 
 #modal-text {
-  padding: 0 41px 41px 41px;
+  line-height: 20px;
   color: rgb(112, 117, 122);
 }
 
