--- a/css/styles.css
+++ b/css/styles.css
@@ -110,10 +110,12 @@ h1 {
 
 /* position 指定用の div クラス */
 .modal-position {
+  /* background-color: red; */
   position: relative;
   width: 100%;
   height: 100%;
-  padding: 41px;
+  padding-top: 41px;
+  /* padding-top: 54px; */
 }
 
 .icon-2 {
@@ -130,6 +132,7 @@ h1 {
 }
 
 #modal-text {
+  padding: 0 41px 41px 41px;
   line-height: 20px;
   color: rgb(112, 117, 122);
 }
@@ -140,7 +143,7 @@ h1 {
   height: 100%;
   top: 54px;
   left: 0;
-  padding: 0 16px 16px 16px;
+  padding: 13px 16px 16px 16px;
 }
 
 .table-1+.table-1 {
