--- a/css/styles.css
+++ b/css/styles.css
@@ -110,16 +110,16 @@ h1 {
 
 /* position 指定用の div クラス */
 .modal-position {
-  /* background-color: red; */
   position: relative;
   width: 100%;
   height: 100%;
-  padding-top: 41px;
-  /* padding-top: 54px; */
 }
 
 .icon-2 {
+  display: block;
+  height: 54px;
   position: absolute;
+  text-align: left;
   top: 0;
   left: 0;
   padding: 16px;
@@ -132,7 +132,7 @@ h1 {
 }
 
 #modal-text {
-  padding: 0 41px 41px 41px;
+  padding: 41px;
   line-height: 20px;
   color: rgb(112, 117, 122);
 }
@@ -141,9 +141,8 @@ h1 {
   display: none;
   width: 100%;
   height: 100%;
-  top: 54px;
   left: 0;
-  padding: 13px 16px 16px 16px;
+  padding: 0 16px 16px 16px;
   max-height: 291px;
   overflow-y: scroll;
 }
@@ -162,6 +161,7 @@ h1 {
 
 .modal-border {
   border-top: 1px solid rgb(218,220,224);
+  padding-top: 16px !important;
 }
 
 .td-1 {
