--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,11 @@ h1 {
   display: flex;
 }
 
+.click-preview {
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.30);
+  border: 1px solid #4285f4;
+}
+
 .expression {
   font-size: 32px;
   text-align: right;
