--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,13 @@
   display: flex;
 }
 
+html {
+  font-size: 62.5%;
+  font-size: calc(1em * .625);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 /* 関数電卓非表示 ----------------------------------------------- */
 * {
   /* padding と border を幅と高さに含める */
@@ -40,19 +47,19 @@ input {
 }
 
 .btn-tr {
-  height: 44px;
+  height: 4.4rem;
 }
 
 .btn-tr td {
-  height: 44px;
+  height: 4.4rem;
 }
 
 .btn-tr td > div {
-  height: 38px;
-  margin: 2px;
+  height: 3.8rem;
+  margin: .2rem;
   cursor: pointer;
-  line-height: 34px;
-  border-radius: 4px;
+  line-height: 3.4rem;
+  border-radius: .4rem;
 }
 
 td {
@@ -69,7 +76,7 @@ body {
   height: 100%;
   max-height: 100%;
   font-family: "Helvetica Neue", "Roboto", Arial, sans-serif;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 h1 {
@@ -79,27 +86,27 @@ h1 {
 
 .main {
   position: relative;
-  padding: 16px 0 12px 0;
-  margin: 0 12px 12px 12px;
+  padding: 1.6rem 0 1.2rem 0;
+  margin: 0 1.2rem 1.2rem 1.2rem;
   max-height: 100%;
 }
 
 .panel {
-  padding: 10px 16px 0 10px;
-  border: 1px solid #dadce0;
-  border-radius: 8px;
-  height: 80px;
+  padding: 1rem 1.6rem 0 1rem;
+  border: 0.1rem solid #dadce0;
+  border-radius: .8rem;
+  height: 8rem;
 }
 
 .history {
-  height: 20px;
+  height: 2rem;
   justify-content: space-between;
 }
 
 #prev-history {
-  height: 13px;
-  margin-top: 3px;
-  font-size: 13px;
+  height: 1.3rem;
+  margin-top: .3rem;
+  font-size: 1.3rem;
   color: #70757a;
 }
 
@@ -110,19 +117,19 @@ h1 {
 #modal {
   display: none;
   position: absolute;
-  top: 11px;
-  left: -1px;
-  width: 280px;
+  top: 1.1rem;
+  left: -.1rem;
+  width: 28rem;
   max-width: 100%;
-  min-height: 104px;
-  max-height: 346px;
+  min-height: 10.4rem;
+  max-height: 34.6rem;
   z-index: 3;
   text-align: center;
   background-color: white;
   color: #4d5156;
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.28) 0 1px 4px 0;
-  font-size: 16px;
+  border-radius: .8rem;
+  box-shadow: rgba(0, 0, 0, 0.28) 0 0.1rem 0.4rem 0;
+  font-size: 1.6rem;
 }
 
 /* position 指定用の div クラス */
@@ -134,25 +141,25 @@ h1 {
 
 .icon-1 {
   color: #70757a;
-  font-size: 22px;
+  font-size: 2.2rem;
 }
 
 .icon-2 {
   display: block;
-  height: 54px;
+  height: 5.4rem;
   position: absolute;
   text-align: left;
   top: 0;
   left: 0;
-  padding: 16px;
+  padding: 1.6rem;
   color: #1a73e8;
-  font-size: 22px;
+  font-size: 2.2rem;
 }
 
 .preview {
   position: relative;
-  height: 32px;
-  margin-top: 6px;
+  height: 3.2rem;
+  margin-top: .6rem;
   text-align: right;
   overflow: hidden;
 }
@@ -162,7 +169,7 @@ h1 {
   display: block;
   width: 100%;
   text-align: right;
-  font-size: 32px;
+  font-size: 3.2rem;
   color: #4d5156;
   /* 改行をさせない */
   white-space: nowrap;
@@ -175,8 +182,8 @@ h1 {
 }
 
 #modal-text {
-  padding: 41px;
-  line-height: 20px;
+  padding: 4.1rem;
+  line-height: 2rem;
   color: #70757a;
 }
 
@@ -185,19 +192,19 @@ h1 {
   width: 100%;
   height: 100%;
   left: 0;
-  padding: 0 16px 16px 16px;
-  max-height: 291px;
+  padding: 0 1.6rem 1.6rem 1.6rem;
+  max-height: 29.1rem;
   overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .table-1 + .table-1 {
-  margin-top: 16px;
+  margin-top: 1.6rem;
 }
 
 .table-1 {
-  height: 32px;
-  max-width: 248px;
+  height: 3.2rem;
+  max-width: 24.8rem;
   border-collapse: separate;
   border-spacing: 0;
   text-align: left;
@@ -205,21 +212,21 @@ h1 {
 }
 
 .modal-border {
-  border-top: 1px solid #dadce0;
-  padding-top: 16px !important;
+  border-top: 0.1rem solid #dadce0;
+  padding-top: 1.6rem !important;
 }
 
 .td-1 {
   display: table-cell;
-  height: 32px;
-  /* (248px -30px) / 2 の幅*/
-  max-width: 109px;
-  line-height: 14px;
-  padding: 6px 12px;
-  font-size: 14px;
+  height: 3.2rem;
+  /* (24.8rem -3rem) / 2 の幅*/
+  max-width: 10.9rem;
+  line-height: 1.4rem;
+  padding: .6rem 1.2rem;
+  font-size: 1.4rem;
   color: #1a73e8;
-  border: 1px solid #dadce0;
-  border-radius: 4px;
+  border: 0.1rem solid #dadce0;
+  border-radius: .4rem;
   text-align: center;
   vertical-align: middle;
   /* 要素より長い文字列を省略する */
@@ -230,12 +237,12 @@ h1 {
 
 .td-2 {
   display: table-cell;
-  width: 30px;
-  min-width: 30px;
-  height: 30px;
-  line-height: 20px;
-  padding: 1px;
-  font-size: 20px;
+  width: 3rem;
+  min-width: 3rem;
+  height: 3rem;
+  line-height: 2rem;
+  padding: .1rem;
+  font-size: 2rem;
   color: #70757a;
   text-align: center;
   vertical-align: middle;
@@ -243,15 +250,15 @@ h1 {
 
 .td-3 {
   display: table-cell;
-  height: 32px;
-  /* (248px -30px) / 2 の幅*/
-  max-width: 109px;
-  line-height: 14px;
-  padding: 6px 12px;
-  font-size: 14px;
+  height: 3.2rem;
+  /* (24.8rem -3rem) / 2 の幅*/
+  max-width: 10.9rem;
+  line-height: 1.4rem;
+  padding: .6rem 1.2rem;
+  font-size: 1.4rem;
   color: #1a73e8;
-  border: 1px solid #dadce0;
-  border-radius: 4px;
+  border: 0.1rem solid #dadce0;
+  border-radius: .4rem;
   text-align: center;
   vertical-align: middle;
   /* 要素より長い文字列を省略する */
@@ -263,33 +270,33 @@ h1 {
 .td-4 {
   pointer-events: none;
   display: table-cell;
-  height: 32px;
-  line-height: 14px;
-  padding: 6px 12px;
-  font-size: 14px;
+  height: 3.2rem;
+  line-height: 1.4rem;
+  padding: .6rem 1.2rem;
+  font-size: 1.4rem;
   color: #dadce0;
   background-color: #f8f9fa;
-  border-radius: 4px;
+  border-radius: .4rem;
   text-align: center;
   vertical-align: middle;
 }
 
 .click-preview {
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
-  border: 1px solid #4285f4;
+  box-shadow: inset 0 0.1rem 0.2rem rgba(0, 0, 0, 0.3);
+  border: .1rem solid #4285f4;
 }
 
 .expression {
   display: block;
   width: 100%;
-  font-size: 32px;
+  font-size: 3.2rem;
   text-align: right;
   color: #4d5156;
   text-align: right;
 }
 
 .calc-buttons {
-  margin-top: 8px;
+  margin-top: .8rem;
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -304,58 +311,58 @@ h1 {
 }
 
 .calc-buttons td {
-  height: 36px;
+  height: 3.6rem;
   text-align: center;
 }
 
 .color1 {
   color: #202124;
   background-color: #dadce0;
-  border: 1px solid white;
+  border: 0.1rem solid white;
 }
 
 .color1:active {
-  border: 1px solid #dadce0;
+  border: 0.1rem solid #dadce0;
 }
 
 .color2 {
   color: #202124;
   background-color: #f1f3f4;
-  border: 1px solid white;
+  border: 0.1rem solid white;
 }
 
 .color2:active {
-  border: 1px solid #dadce0;
+  border: 0.1rem solid #dadce0;
 }
 
 .color3 {
   color: #70757a;
   background-color: #dadce0;
-  border: 1px solid white;
+  border: 0.1rem solid white;
 }
 
 .color4 {
-  height: 36px !important;
-  margin: 4px !important;
+  height: 3.6rem !important;
+  margin: .4rem !important;
   background-color: #4285f4;
   color: white;
 }
 
 .color4:active {
-  box-shadow: 0 1px 2px 0 rgba(66, 133, 244, 0.45), 0 3px 6px 2px rgba(66, 133, 244, 0.3);
+  box-shadow: 0 0.1rem 0.2rem 0 rgba(66, 133, 244, 0.45), 0 0.3rem 0.6rem 0.2rem rgba(66, 133, 244, 0.3);
 }
 
 .font1 {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
 }
 
 .font2 {
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 
 .font3 {
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 /* 関数電卓 scientific calculator */
@@ -365,19 +372,19 @@ h1 {
 
 /* 関数電卓表示 ----------------------------------------------- */
 /* Google 検索時の仕様に合わせ break point 指定 */
-@media (min-width: 460px) {
+@media (min-width: 46rem) {
   #modal {
-    width: 448px;
+    width: 44.8rem;
   }
   .sc-calc {
     display: table-cell;
   }
   .td-1 {
-    /* (416px -30px) / 2 の幅*/
-    max-width: 193px;
+    /* (41.6rem -3rem) / 2 の幅*/
+    max-width: 19.3rem;
   }
   .td-3 {
-    /* (416px -30px) / 2 の幅*/
-    max-width: 193px;
+    /* (41.6rem -3rem) / 2 の幅*/
+    max-width: 19.3rem;
   }
 }
