--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@
 @import 'layout/l_display.scss';
 @import 'layout/l_flex.scss';
 
+html { font-size: 62.5%; font-size: calc(1em * .625); -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
+
 /* 関数電卓非表示 ----------------------------------------------- */
 
 * {
@@ -31,18 +33,18 @@ input {
 }
 
 .btn-tr {
-    height: 44px;
+    height: 4.4rem;
 
     td {
-        height: 44px;
+        height: 4.4rem;
     }
 
     td>div {
-        height: 38px;
-        margin: 2px;
+        height: 3.8rem;
+        margin: .2rem;
         cursor: pointer;
-        line-height: 34px;
-        border-radius: 4px;
+        line-height: 3.4rem;
+        border-radius: .4rem;
     }
 }
 
@@ -60,7 +62,7 @@ body {
     height: 100%;
     max-height: 100%;
     font-family: "Helvetica Neue", "Roboto", Arial, sans-serif;
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 h1 {
@@ -70,27 +72,27 @@ h1 {
 
 .main {
     position: relative;
-    padding: 16px 0 12px 0;
-    margin: 0 12px 12px 12px;
+    padding: 1.6rem 0 1.2rem 0;
+    margin: 0 1.2rem 1.2rem 1.2rem;
     max-height: 100%;
 }
 
 .panel {
-    padding: 10px 16px 0 10px;
-    border: 1px solid colors(gray_2);
-    border-radius: 8px;
-    height: 80px;
+    padding: 1rem 1.6rem 0 1rem;
+    border: .1rem solid colors(gray_2);
+    border-radius: .8rem;
+    height: 8rem;
 }
 
 .history {
-    height: 20px;
+    height: 2rem;
     justify-content: space-between;
 }
 
 #prev-history {
-    height: 13px;
-    margin-top: 3px;
-    font-size: 13px;
+    height: 1.3rem;
+    margin-top: .3rem;
+    font-size: 1.3rem;
     color: colors(gray_1);
 }
 
@@ -101,19 +103,19 @@ h1 {
 #modal {
     display: none;
     position: absolute;
-    top: 11px;
-    left: -1px;
-    width: 280px;
+    top: 1.1rem;
+    left: -.1rem;
+    width: 28rem;
     max-width: 100%;
-    min-height: 104px;
-    max-height: 346px;
+    min-height: 10.4rem;
+    max-height: 34.6rem;
     z-index: 3;
     text-align: center;
     background-color: colors(white);
     color: colors(gray_3);
-    border-radius: 8px;
-    box-shadow: colors(black_28) 0 1px 4px 0;
-    font-size: 16px;
+    border-radius: .8rem;
+    box-shadow: colors(black_28) 0 .1rem .4rem 0;
+    font-size: 1.6rem;
 }
 
 /* position 指定用の div クラス */
@@ -125,25 +127,25 @@ h1 {
 
 .icon-1 {
     color: colors(gray_1);
-    font-size: 22px;
+    font-size: 2.2rem;
 }
 
 .icon-2 {
     display: block;
-    height: 54px;
+    height: 5.4rem;
     position: absolute;
     text-align: left;
     top: 0;
     left: 0;
-    padding: 16px;
+    padding: 1.6rem;
     color: colors(blue_1);
-    font-size: 22px;
+    font-size: 2.2rem;
 }
 
 .preview {
     position: relative;
-    height: 32px;
-    margin-top: 6px;
+    height: 3.2rem;
+    margin-top: .6rem;
     text-align: right;
     overflow: hidden;
 }
@@ -153,7 +155,7 @@ h1 {
     display: block;
     width: 100%;
     text-align: right;
-    font-size: 32px;
+    font-size: 3.2rem;
     color: colors(gray_3);
     /* 改行をさせない */
     white-space: nowrap;
@@ -166,8 +168,8 @@ h1 {
 }
 
 #modal-text {
-    padding: 41px;
-    line-height: 20px;
+    padding: 4.1rem;
+    line-height: 2rem;
     color: colors(gray_1);
 }
 
@@ -176,19 +178,19 @@ h1 {
     width: 100%;
     height: 100%;
     left: 0;
-    padding: 0 16px 16px 16px;
-    max-height: 291px;
+    padding: 0 1.6rem 1.6rem 1.6rem;
+    max-height: 29.1rem;
     overflow-y: scroll;
     overflow-x: hidden;
 }
 
 .table-1+.table-1 {
-    margin-top: 16px;
+    margin-top: 1.6rem;
 }
 
 .table-1 {
-    height: 32px;
-    max-width: 248px;
+    height: 3.2rem;
+    max-width: 24.8rem;
     border-collapse: separate;
     border-spacing: 0;
     text-align: left;
@@ -196,21 +198,21 @@ h1 {
 }
 
 .modal-border {
-    border-top: 1px solid colors(gray_2);
-    padding-top: 16px !important;
+    border-top: .1rem solid colors(gray_2);
+    padding-top: 1.6rem !important;
 }
 
 .td-1 {
     display: table-cell;
-    height: 32px;
-    /* (248px -30px) / 2 の幅*/
-    max-width: 109px;
-    line-height: 14px;
-    padding: 6px 12px;
-    font-size: 14px;
+    height: 3.2rem;
+    /* (24.8rem -3rem) / 2 の幅*/
+    max-width: 10.9rem;
+    line-height: 1.4rem;
+    padding: .6rem 1.2rem;
+    font-size: 1.4rem;
     color: colors(blue_1);
-    border: 1px solid colors(gray_2);
-    border-radius: 4px;
+    border: .1rem solid colors(gray_2);
+    border-radius: .4rem;
     text-align: center;
     vertical-align: middle;
     /* 要素より長い文字列を省略する */
@@ -221,12 +223,12 @@ h1 {
 
 .td-2 {
     display: table-cell;
-    width: 30px;
-    min-width: 30px;
-    height: 30px;
-    line-height: 20px;
-    padding: 1px;
-    font-size: 20px;
+    width: 3rem;
+    min-width: 3rem;
+    height: 3rem;
+    line-height: 2rem;
+    padding: .1rem;
+    font-size: 2rem;
     color: colors(gray_1);
     text-align: center;
     vertical-align: middle;
@@ -234,15 +236,15 @@ h1 {
 
 .td-3 {
     display: table-cell;
-    height: 32px;
-    /* (248px -30px) / 2 の幅*/
-    max-width: 109px;
-    line-height: 14px;
-    padding: 6px 12px;
-    font-size: 14px;
+    height: 3.2rem;
+    /* (24.8rem -3rem) / 2 の幅*/
+    max-width: 10.9rem;
+    line-height: 1.4rem;
+    padding: .6rem 1.2rem;
+    font-size: 1.4rem;
     color: colors(blue_1);
-    border: 1px solid colors(gray_2);
-    border-radius: 4px;
+    border: .1rem solid colors(gray_2);
+    border-radius: .4rem;
     text-align: center;
     vertical-align: middle;
     /* 要素より長い文字列を省略する */
@@ -254,33 +256,33 @@ h1 {
 .td-4 {
     pointer-events: none;
     display: table-cell;
-    height: 32px;
-    line-height: 14px;
-    padding: 6px 12px;
-    font-size: 14px;
+    height: 3.2rem;
+    line-height: 1.4rem;
+    padding: .6rem 1.2rem;
+    font-size: 1.4rem;
     color: colors(gray_2);
     background-color: colors(white_1);
-    border-radius: 4px;
+    border-radius: .4rem;
     text-align: center;
     vertical-align: middle;
 }
 
 .click-preview {
-    box-shadow: inset 0 1px 2px colors(black_30);
-    border: 1px solid #4285f4;
+    box-shadow: inset 0 .1rem .2rem colors(black_30);
+    border: .1rem solid #4285f4;
 }
 
 .expression {
     display: block;
     width: 100%;
-    font-size: 32px;
+    font-size: 3.2rem;
     text-align: right;
     color: colors(gray_3);
     text-align: right;
 }
 
 .calc-buttons {
-    margin-top: 8px;
+    margin-top: .8rem;
     overflow-x: hidden;
     overflow-y: hidden;
 
@@ -294,7 +296,7 @@ h1 {
     }
 
     td {
-        height: 36px;
+        height: 3.6rem;
         text-align: center;
     }
 }
@@ -302,52 +304,52 @@ h1 {
 .color1 {
     color: colors(gray_4);
     background-color: colors(gray_2);
-    border: 1px solid colors(white);
+    border: .1rem solid colors(white);
 
     &:active {
-        border: 1px solid colors(gray_2);
+        border: .1rem solid colors(gray_2);
     }
 }
 
 .color2 {
     color: colors(gray_4);
     background-color: colors(white_2);
-    border: 1px solid colors(white);
+    border: .1rem solid colors(white);
 
     &:active {
-        border: 1px solid colors(gray_2);
+        border: .1rem solid colors(gray_2);
     }
 }
 
 .color3 {
     color: colors(gray_1);
     background-color: colors(gray_2);
-    border: 1px solid colors(white);
+    border: .1rem solid colors(white);
 }
 
 .color4 {
-    height: 36px !important;
-    margin: 4px !important;
+    height: 3.6rem !important;
+    margin: .4rem !important;
     background-color: colors(blue_2);
     color: colors(white);
 
     &:active {
-        box-shadow: 0 1px 2px 0 colors(shadow_1), 0 3px 6px 2px colors(shadow_2);
+        box-shadow: 0 .1rem .2rem 0 colors(shadow_1), 0 .3rem .6rem .2rem colors(shadow_2);
     }
 }
 
 
 .font1 {
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
 }
 
 .font2 {
-    font-size: 14px;
+    font-size: 1.4rem;
 }
 
 .font3 {
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 /* 関数電卓 scientific calculator */
@@ -357,9 +359,9 @@ h1 {
 
 /* 関数電卓表示 ----------------------------------------------- */
 /* Google 検索時の仕様に合わせ break point 指定 */
-@media (min-width: 460px) {
+@media (min-width: 46rem) {
     #modal {
-        width: 448px;
+        width: 44.8rem;
     }
 
     .sc-calc {
@@ -367,13 +369,13 @@ h1 {
     }
 
     .td-1 {
-        /* (416px -30px) / 2 の幅*/
-        max-width: 193px;
+        /* (41.6rem -3rem) / 2 の幅*/
+        max-width: 19.3rem;
     }
 
     .td-3 {
-        /* (416px -30px) / 2 の幅*/
-        max-width: 193px;
+        /* (41.6rem -3rem) / 2 の幅*/
+        max-width: 19.3rem;
     }
 
 }
