--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 // layout
 @import 'layout/l_display.scss';
 @import 'layout/l_flex.scss';
+@import 'module/history_table.scss';
 
 html { font-size: 62.5%; font-size: calc(1em * .625); -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
@@ -202,71 +203,6 @@ h1 {
     padding-top: 1.6rem !important;
 }
 
-.td-1 {
-    display: table-cell;
-    height: 3.2rem;
-    /* (24.8rem -3rem) / 2 の幅*/
-    max-width: 10.9rem;
-    line-height: 1.4rem;
-    padding: .6rem 1.2rem;
-    font-size: 1.4rem;
-    color: colors(blue_1);
-    border: .1rem solid colors(gray_2);
-    border-radius: .4rem;
-    text-align: center;
-    vertical-align: middle;
-    /* 要素より長い文字列を省略する */
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.td-2 {
-    display: table-cell;
-    width: 3rem;
-    min-width: 3rem;
-    height: 3rem;
-    line-height: 2rem;
-    padding: .1rem;
-    font-size: 2rem;
-    color: colors(gray_1);
-    text-align: center;
-    vertical-align: middle;
-}
-
-.td-3 {
-    display: table-cell;
-    height: 3.2rem;
-    /* (24.8rem -3rem) / 2 の幅*/
-    max-width: 10.9rem;
-    line-height: 1.4rem;
-    padding: .6rem 1.2rem;
-    font-size: 1.4rem;
-    color: colors(blue_1);
-    border: .1rem solid colors(gray_2);
-    border-radius: .4rem;
-    text-align: center;
-    vertical-align: middle;
-    /* 要素より長い文字列を省略する */
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-.td-4 {
-    pointer-events: none;
-    display: table-cell;
-    height: 3.2rem;
-    line-height: 1.4rem;
-    padding: .6rem 1.2rem;
-    font-size: 1.4rem;
-    color: colors(gray_2);
-    background-color: colors(white_1);
-    border-radius: .4rem;
-    text-align: center;
-    vertical-align: middle;
-}
-
 .click-preview {
     box-shadow: inset 0 .1rem .2rem colors(black_30);
     border: .1rem solid #4285f4;
@@ -366,16 +302,6 @@ h1 {
 
     .sc-calc {
         display: table-cell;
-    }
-
-    .td-1 {
-        /* (41.6rem -3rem) / 2 の幅*/
-        max-width: 19.3rem;
-    }
-
-    .td-3 {
-        /* (41.6rem -3rem) / 2 の幅*/
-        max-width: 19.3rem;
     }
 
 }
