--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,19 @@
   display: table-cell;
 }
 
+.table-1 {
+  height: 3.2rem;
+  max-width: 24.8rem;
+  border-collapse: separate;
+  border-spacing: 0;
+  text-align: left;
+  table-layout: auto;
+}
+
+.table-1 + .table-1 {
+  margin-top: 1.6rem;
+}
+
 .td-1 {
   display: table-cell;
   height: 3.2rem;
@@ -278,19 +291,6 @@ h1 {
   overflow-x: hidden;
 }
 
-.table-1 + .table-1 {
-  margin-top: 1.6rem;
-}
-
-.table-1 {
-  height: 3.2rem;
-  max-width: 24.8rem;
-  border-collapse: separate;
-  border-spacing: 0;
-  text-align: left;
-  table-layout: auto;
-}
-
 .modal-border {
   border-top: 0.1rem solid #dadce0;
   padding-top: 1.6rem !important;
@@ -385,7 +385,7 @@ h1 {
   display: none;
 }
 
-/* 関数電卓表示 ----------------------------------------------- */
+/* sp 表示 ----------------------------------------------- */
 /* Google 検索時の仕様に合わせ break point 指定 */
 @media (min-width: 46rem) {
   #modal {
