--- a/sass/module/history_table.scss
+++ b/sass/module/history_table.scss
@@ -1,3 +1,16 @@
+.table-1 {
+    height: 3.2rem;
+    max-width: 24.8rem;
+    border-collapse: separate;
+    border-spacing: 0;
+    text-align: left;
+    table-layout: auto;
+}
+
+.table-1+.table-1 {
+    margin-top: 1.6rem;
+}
+
 .td-1 {
     display: table-cell;
     height: 3.2rem;
