--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,7 @@
 @import 'layout/l_display.scss';
 @import 'layout/l_flex.scss';
 @import 'module/history_table.scss';
+@import 'base/normalize.scss';
 
 html { font-size: 62.5%; font-size: calc(1em * .625); -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
