mixin の記述に変更

--- a/css/main.css
+++ b/css/main.css
@@ -687,26 +687,24 @@ h1 {
 }
 
 .color-4 {
-  height: 3.6rem !important;
-  margin: .4rem !important;
-  background-color: #4285f4;
   color: white;
+  background-color: #4285f4;
 }
 
 .color-4:active {
   box-shadow: 0 0.1rem 0.2rem 0 rgba(66, 133, 244, 0.45), 0 0.3rem 0.6rem 0.2rem rgba(66, 133, 244, 0.3);
 }
 
-.font1 {
+.font-1 {
   font-size: 2rem;
   font-weight: 700;
 }
 
-.font2 {
+.font-2 {
   font-size: 1.4rem;
 }
 
-.font3 {
+.font-3 {
   font-size: 2rem;
 }
 
@@ -715,7 +713,7 @@ h1 {
   display: none;
 }
 
-/* sp 表示 ----------------------------------------------- */
+/* pc 表示 ----------------------------------------------- */
 /* Google 検索時の仕様に合わせ break point 指定 */
 @media (min-width: 46rem) {
   #modal {
