--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 // function
-@import 'function/basic.scss';
+@import 'function/colors.scss';
 
 // layout
 @import 'layout/l_display.scss';
@@ -225,9 +225,13 @@ h1 {
     }
 }
 
+@mixin color($color, $bg-color) {
+    color: $color;
+    background-color: $bg-color;
+}
+
 .color-1 {
-    color: colors(gray_4);
-    background-color: colors(gray_2);
+    @include color($color: colors(gray_4), $bg-color: colors(gray_2));
     border: .1rem solid colors(white);
 
     &:active {
@@ -236,8 +240,7 @@ h1 {
 }
 
 .color-2 {
-    color: colors(gray_4);
-    background-color: colors(white_2);
+    @include color($color: colors(gray_4), $bg-color: colors(white_2));
     border: .1rem solid colors(white);
 
     &:active {
@@ -246,16 +249,14 @@ h1 {
 }
 
 .color-3 {
-    color: colors(gray_1);
-    background-color: colors(gray_2);
+    @include color($color: colors(gray_1), $bg-color: colors(gray_2));
     border: .1rem solid colors(white);
 }
 
 .color-4 {
-    height: 3.6rem !important;
-    margin: .4rem !important;
-    background-color: colors(blue_2);
-    color: colors(white);
+    // height: 3.6rem !important;
+    // margin: .4rem !important;
+    @include color($color: colors(white), $bg-color: colors(blue_2));
 
     &:active {
         box-shadow: 0 .1rem .2rem 0 colors(shadow_1), 0 .3rem .6rem .2rem colors(shadow_2);
@@ -263,16 +264,16 @@ h1 {
 }
 
 
-.font1 {
+.font-1 {
     font-size: 2rem;
     font-weight: 700;
 }
 
-.font2 {
+.font-2 {
     font-size: 1.4rem;
 }
 
-.font3 {
+.font-3 {
     font-size: 2rem;
 }
 
@@ -281,7 +282,7 @@ h1 {
     display: none;
 }
 
-/* sp 表示 ----------------------------------------------- */
+/* pc 表示 ----------------------------------------------- */
 /* Google 検索時の仕様に合わせ break point 指定 */
 @media (min-width: 46rem) {
     #modal {
